page overflow fix

--- a/src/app/modules/app/components/login/login.component.css
+++ b/src/app/modules/app/components/login/login.component.css
@@ -27,7 +27,7 @@
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
   border-radius: 2%;
   margin: auto;
-  margin-top: 10%;
+  margin-top: 5%;
   margin-left: 35%;
   margin-right: 35%;
 }
