--- a/src/app/modules/user/components/userhome/userhome.component.css
+++ b/src/app/modules/user/components/userhome/userhome.component.css
@@ -1,32 +1,37 @@
 html, body {
+    display: table;
     margin: 0;
     height: 100%;
+    width: 100%;
     overflow: hidden;
     background: goldenrod;
     font-family: Ubuntu;
 }
 
+.page {
+    position: relative;
+}
+
 .welcome-message {
-    text-align:center;
-    padding-top: 45px;
+    text-align: center;
     font-size: 420%;
 }
 
 .welcome-message-footer {
-    text-align:center;
+    text-align: center;
     font-family: Ubuntu;
     font-size: 220%;
     color: white;
 }
 
 .button-wrapper {
-    padding-top: 40px;
-    padding-bottom: 60px;
+    padding-top: 2%;
+    padding-bottom: 2%;
     font-family: Ubuntu;
     text-align: center;
 }
 
-.important-button  {
+.important-button {
     font-family: Ubuntu;
     width: 15%;
     min-width: 160px;
@@ -43,17 +48,17 @@ html, body {
     min-width: 160px;
     border-radius: 100px;
     background-color: black;
-    color: white;    
+    color: white;
     margin-left: 2.5%;
     font-size: 15px;
-
 }
 
-.table-user-info{
+.table-user-info {
     background-color: white;
     border-radius: 15px;
-    min-width:400px;
-    width:60%;
+    min-width: 400px;
+    width: 60%;
+    margin-bottom: 10%;
 }
 
 .user-info {
@@ -64,7 +69,7 @@ html, body {
     padding: 15px;
 }
 
-.border-between > [class*='col']:before {
+.border-between>[class*='col']:before {
     background: #e3e3e3;
     bottom: 0;
     content: " ";
@@ -72,11 +77,12 @@ html, body {
     position: absolute;
     width: 1px;
     top: 0;
- }
- 
- .border-between > [class*='col']:first-child:before {
+}
+
+.border-between>[class*='col']:first-child:before {
     display: none;
- }
+}
 
-button:focus {outline:0;}
-
+button:focus {
+    outline: 0;
+}
